--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Django==5.2.4
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.27.2
 celery==5.4.0
 redis==5.2.1
 django-cors-headers==4.5.0
 python-decouple==3.8
+django-redis==5.4.0
